Fixed mobile double scroll bar

--- a/css/main.css
+++ b/css/main.css
@@ -39,7 +39,7 @@ a:hover {
     z-index: 9999; /* Stay on top */
     top: 0;
     right: 0;
-    background-color: rgba(255,255,255,0.8); /* Black*/
+    background-color: rgba(255,255,255,0.9); /* Black*/
     overflow-x: hidden; /* Disable horizontal scroll */
     padding: 0px !important; /* Place content 60px from the top */
     transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
@@ -156,16 +156,18 @@ display: block;
     border-radius: 0;
     border: none;
     min-width: 100px;
+    padding: 0;
 }
 
-.dropdown-menu li a {
+.dropdown-menu li a, .dropdown-submenu li a {
     padding: 18px 30px;
     margin: 0;
 }
 
 .dropdown-menu>li>a:hover {
     background-image: none;
-    background-color: transparent;
+    background-color: orange;
+    color: white;
 }
 
 
@@ -424,7 +426,6 @@ text-transform: uppercase;
 footer {
     position: relative;
     background-color: #f6f6f6;
-    height: 500px;
     
 }
 
